feat: Add user prefrences - visited links - complexity

--- a/src/_includes/partials/preference-link-visited.njk
+++ b/src/_includes/partials/preference-link-visited.njk
@@ -8,26 +8,30 @@
             <label>
                 <input type="radio" name="link-visited" value="false"/> Disabled
             </label>
-            <output data-layout="box" data-props="noPad">
-                <b data-layout="box" data-props="invert noBorder space:xs">preview</b>
-                <ul role="list" data-layout="box" data-props="noBorder">
-                    <li>
-                        <a class="headline-entry" data-button="link noHover" href="/preferences">
-                            <span class="headline-text">
-                                This page have been visited
-                            </span>
-                        </a>
-                    </li>
-                    <li>
-                        <!-- Disable the link by removing the href -->
-                        <a class="headline-entry" data-button="link noHover">
-                            <span class="headline-text">
-                                This links a page not yet visited
-                            </span>
-                        </a>
-                    </li>
-                </ul>
-            </output>
+            <details data-layout="box" data-props="noPad" data-accordion>
+                <summary>
+                    Preview
+                </summary>
+                <output data-layout="box" data-props=" noBorder">
+                    <ul role="list">
+                        <li>
+                            <a class="headline-entry" data-button="link noHover" href="/preferences">
+                                <span class="headline-text">
+                                    This page have been visited
+                                </span>
+                            </a>
+                        </li>
+                        <li>
+                            <!-- Disable the link by removing the href -->
+                            <a class="headline-entry" data-button="link noHover">
+                                <span class="headline-text">
+                                    This links a page not yet visited
+                                </span>
+                            </a>
+                        </li>
+                    </ul>
+                </output>
+            </details>
         </fieldset>
     </form>
 </template>
