--- a/src/assets/styles/style.njk
+++ b/src/assets/styles/style.njk
@@ -2,11 +2,15 @@
 permalink: css/style.css
 eleventyExcludeFromCollections: true
 ---
-{% include "./_fonts.css" %}
-{% include "./_tokens.css" %}
-{% include "./_colors.css" %}
 {% include "./_resets.css" %}
+{% include "./_fonts.css" %}
 {% include "./_globals.css" %}
+{% include "./_tokens.css" %}
 {% include "./_layouts.css" %}
+{% include "./_colors.css" %}
 {% include "./components/_buttons.css" %}
+{% include "./components/_blockquote.css" %}
+{% include "./components/_code.css" %}
+{% include "./components/_scrollbar.css" %}
+{% include "./components/_details.css" %}
 {% include "./_main.css" %}
