--- a/src/content/preferences-page.njk
+++ b/src/content/preferences-page.njk
@@ -8,10 +8,11 @@ eleventyComputed:
   description: "Set your preferences"
   eleventyNavigation:
     key: Preferences
-    parent: Home
+    parent: All
 ---
 
 <h1>Preferences</h1>
 
 {% include "partials/preference-color-scheme.njk"%}
 {% include "partials/preference-link-visited.njk"%}
+{% include "partials/preference-complexity.njk"%}
