--- a/src/_includes/layouts/base-layout.njk
+++ b/src/_includes/layouts/base-layout.njk
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" data-visited-preference="false">
+<html lang="en">
     {% include "partials/site-head.njk" %}
     <body>
         {% include "partials/site-header.njk" %}
