--- a/src/assets/styles/_colors.css
+++ b/src/assets/styles/_colors.css
@@ -1,4 +1,4 @@
-:root {
+[data-complexity-preference^="IIII"]:root {
   --primary-hue: 33;
   --primary-saturation: 32%;
   --primary-lightness: 31%;
@@ -8,9 +8,9 @@
     var(--primary-saturation),
     var(--primary-lightness)
   );
-  --color-light: #ECE1CB;
+  --color-light: #ece1cb;
   --color-light-accent: hsl(32, 35%, 80%);
-  --color-dark-accent: #735D43;
+  --color-dark-accent: #735d43;
   --color-dark: #433523;
 
   --color-focus: var(--color-dark);
@@ -32,9 +32,11 @@
   --horizontal-line: var(--horizontal-line-dark);
 }
 
-[data-theme-preference="dark"] {
-    --color-dark: hsl(40, 26%, 80%);
-    --color-dark-accent: hsl(32, 15%, 80%);
-    --color-light-accent: hsl(210, 10%, 10%);
-    --color-light: hsl(210, 10%, 8%);
+[data-complexity-preference^="IIII"][data-theme-preference="dark"] {
+  --color-dark: hsl(40, 26%, 80%);
+  --color-dark-accent: hsl(32, 15%, 80%);
+  --color-light-accent: hsl(210, 10%, 10%);
+  --color-light: hsl(210, 10%, 8%);
+  --primary-saturation: 12%;
+  --primary-lightness: 31%;
 }
