--- a/src/assets/styles/components/_buttons.css
+++ b/src/assets/styles/components/_buttons.css
@@ -1,11 +1,17 @@
-[data-button] {
+[data-complexity-preference^="IIIII"] :where(button, a):where(:not(:active)):focus-visible {
+  outline-offset: var(--outline-offset, 5px);
+}
+[data-complexity-preference^="IIIII"] [data-button] {
   --minimum-height: var(--controls-minimum-height);
   padding: var(--button-padding-y, 0) var(--button-padding-x, var(--space-s));
   border-radius: var(--button-border-radius, var(--border-radius));
   min-height: var(--minimum-height);
   line-height: var(--button-line-height, --minimum-height);
   text-decoration: var(--button-text-decoration);
-  text-decoration-color: var(--button-text-decoration-color, var(--color-primary));
+  text-decoration-color: var(
+    --button-text-decoration-color,
+    var(--color-primary)
+  );
   text-decoration-thickness: var(--border-thin);
   color: var(--button-color, var(--color-dark));
   background-color: var(--button-background-color, var(--color-light));
@@ -21,7 +27,7 @@
   box-shadow: 0px var(--button-shadow-width, 0px) 0px currentColor;
 }
 
-[data-button~="primary"] {
+[data-complexity-preference^="IIIII"] [data-button~="primary"] {
   --vertical-alignment: center;
   --button-color: var(--color-light);
   --button-background-color: var(--color-dark);
@@ -29,8 +35,8 @@
   --button-hover-color: var(--color-dark-accent);
   font-family: var(--font-sans-serif);
 }
-[data-button~="outline"],
-[data-button~="tag"] {
+[data-complexity-preference^="IIIII"] [data-button~="outline"],
+[data-complexity-preference^="IIIII"] [data-button~="tag"] {
   --vertical-alignment: center;
   --button-hover-background-color: var(--color-dark);
   --button-hover-border-color: var(--color-dark);
@@ -38,26 +44,23 @@
   font-family: var(--font-sans-serif);
 }
 
-[data-button~="text"],
-[data-button~="tag"],
-[data-button~="link"] {
+[data-complexity-preference^="IIIII"]
+  :is([data-button~="text"], [data-button~="tag"], [data-button~="link"]) {
   --minimum-height: auto;
   --button-padding-y: 0;
 }
-[data-button~="text"],
-[data-button~="link"] {
+[data-complexity-preference^="IIIII"] :is([data-button~="text"], [data-button~="link"]) {
   --button-padding-x: 0;
   --button-border-width: 0;
   --button-border-radius: 0;
   --button-display: inline;
   --button-line-height: 1.5;
 }
-[data-button~="link"] {
+[data-complexity-preference^="IIIII"] [data-button~="link"] {
   --button-text-decoration: underline;
 }
 
-[data-button~="active"],
-[data-button]:active {
+[data-complexity-preference^="IIIII"] :is([data-button~="active"], [data-button]:active) {
   background-color: var(--color-dark);
   color: var(--color-light);
 }
@@ -68,7 +71,7 @@
  *
  */
 
-[data-button~="small"] {
+[data-complexity-preference^="IIIII"] [data-button~="small"] {
   --controls-minimum-height: 24px;
   --button-padding-x: var(--space-2xs);
   font-size: calc(var(--step-0) * 0.75);
@@ -76,25 +79,25 @@
 
 @media (hover: hover) {
   /* On desktop and hover capable screens */
-  [data-button~="link"] {
+  [data-complexity-preference^="IIIII"] [data-button~="link"] {
     --button-background-color: var(--color-light);
     --button-padding-x: 0;
     --button-border-radius: 0;
   }
-  [data-button]:not([data-button~="noHover"]):not([data-button~="link"]):hover {
+  [data-complexity-preference^="IIIII"] [data-button]:not([data-button~="noHover"]):not([data-button~="link"]):hover {
     color: var(--button-hover-color, var(--button-color));
   }
-  [data-button]:not([data-button~="noHover"]):hover {
+  [data-complexity-preference^="IIIII"] [data-button]:not([data-button~="noHover"]):hover {
     background-color: var(
       --button-hover-background-color,
       var(--button-background-color)
     );
     border-color: var(--button-hover-border-color, var(--button-border-color));
   }
-  [data-button~="link"]:not([data-button~="noHover"]):hover {
+  [data-complexity-preference^="IIIII"] [data-button~="link"]:not([data-button~="noHover"]):hover {
     text-decoration-thickness: var(--border-thick);
   }
-  [data-button~="text"]:not([data-button~="noHover"]):hover {
+  [data-complexity-preference^="IIIII"] [data-button~="text"]:not([data-button~="noHover"]):hover {
     --button-text-decoration: underline;
   }
 }
