--- a/src/_includes/partials/preference-color-scheme.njk
+++ b/src/_includes/partials/preference-color-scheme.njk
@@ -1,7 +1,7 @@
 <template class="color-scheme-template">
     <form class="color-scheme-form measured-container">
-        <fieldset>
-            <legend>Theme</legend>
+        <fieldset data-layout="stack" data-props="space:2xs">
+            <legend>Theme (works with a complexity level of 4 and more)</legend>
             <label>
                 <input type="radio" name="color-scheme" value="dark"/> Dark
             </label>
