--- a/src/_includes/partials/preference-complexity.njk
+++ b/src/_includes/partials/preference-complexity.njk
@@ -1,24 +1,24 @@
 <template class="complexity-template">
     <form class="complexity-form measured-container">
-        <fieldset>
+        <fieldset >
             <legend>Complexity</legend>
             <label>
-                <input type="radio" name="complexity" value="I"/> I
+                <input type="radio" name="complexity" value="I"/> Level 1
             </label>
             <label>
-                <input type="radio" name="complexity" value="II"/> II
+                <input type="radio" name="complexity" value="II"/> Level 2
             </label>
             <label>
-                <input type="radio" name="complexity" value="III"/> III
+                <input type="radio" name="complexity" value="III"/> Level 3
             </label>
             <label>
-                <input type="radio" name="complexity" value="IIII"/> IIII
+                <input type="radio" name="complexity" value="IIII"/> Level 4
             </label>
             <label>
-                <input type="radio" name="complexity" value="IIIII"/> IIIII
+                <input type="radio" name="complexity" value="IIIII"/> Level 5
             </label>
             <label>
-                <input type="radio" name="complexity" value="IIIIII"/> IIIIII
+                <input type="radio" name="complexity" value="IIIIII"/> Level 6
             </label>
         </fieldset>
     </form>
