--- a/src/assets/styles/_colors.css
+++ b/src/assets/styles/_colors.css
@@ -16,6 +16,8 @@
   --color-focus: var(--color-dark);
   --color-focus-shadow: var(--color-dark-accent);
 
+  --color-visited: hsl(273 32% 47%);
+
   --shadow-color: 240deg 2% 66%;
   --shadow-elevation-low: rgba(50, 50, 105, 0.15) 0px 2px 5px 0px,
     rgba(0, 0, 0, 0.05) 0px 1px 1px 0px;
@@ -39,4 +41,9 @@
   --color-light: hsl(210, 10%, 8%);
   --primary-saturation: 12%;
   --primary-lightness: 31%;
+  --color-visited: hsl(273 100% 76%);
+}
+
+[data-complexity-preference^="IIII"][data-theme-preference="dark"] hr{
+  filter: invert(100%);
 }
