feat: Improve preferences defaults

--- a/src/_includes/partials/story-card-entry.njk
+++ b/src/_includes/partials/story-card-entry.njk
@@ -1,7 +1,5 @@
 <li>
-    <a class="headline-entry" itemprop="url" data-button="link" href="/{{ entry.slug }}" data-icon="{{entry.icon}}">
-        <span class="headline-text">
-            {{ entry.name }}
-        </span>
+    <a class="headline-entry" data-heading="4" itemprop="url" data-button="link" href="/{{ entry.slug }}" data-icon="{{entry.icon}}">
+        {{ entry.name }}
     </a>
-</h2></li>
+</li>
