--- a/src/_includes/layouts/base-layout.njk
+++ b/src/_includes/layouts/base-layout.njk
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" data-complexity-preference="IIIIII" data-visited-preference="false">
     {% include "partials/site-head.njk" %}
     <body>
         {% include "partials/site-header.njk" %}
-        <main id="main-content"  data-layout="stack" data-props="x:stretch">
+        <main id="main-content"  data-layout="stack center" data-props="x:stretch">
             {% block content %}
                 {{ content | safe }}
             {% endblock %}
