--- a/src/_includes/partials/site-header.njk
+++ b/src/_includes/partials/site-header.njk
@@ -1,11 +1,11 @@
-<header data-layout="cluster" data-props="y:center">
+<header data-layout="cluster center" data-props="y:center x:between">
     <a data-font="sans-serif" data-props="y:center" data-button="text" href="/">
-        <span>{{ meta.site_name }}</span>
+        <b>{{ meta.site_name }}</b>
     </a>
     <aside data-layout="cluster" data-props="y:center">
-        {# <a data-button="link" href="/about">About</a> #}
-        <a data-button="link" href="/preferences">Preferences</a>
+        {# <a data-button="link" href="/decision-trees">DT</a> #}
         <a data-button="link" href="/style-guide">Style Guide</a>
-        {% include "partials/site-theme-toggle.njk" %}
+        <a data-button="link" href="/preferences">Preferences</a>
+        {# {% include "partials/site-theme-toggle.njk" %} #}
     </aside>
 </header>
