--- a/src/assets/styles/_globals.css
+++ b/src/assets/styles/_globals.css
@@ -6,7 +6,7 @@ html[data-complexity-preference^="IIIIII"] {
 }
 
 body {
-  font-family: var(--font-sans-serif);
+  font-family: var(--font-serif);
   font-size: var(--step-0);
   background-color: var(--color-light);
   color: var(--color-dark);
