--- a/src/content/home-page.njk
+++ b/src/content/home-page.njk
@@ -15,24 +15,27 @@ eleventyComputed:
         key: "{{currentCategory}}"
         title: "{{'Home' if currentCategory == 'All' else currentCategory}}"
 ---
-<h1 class="visually-hidden">
-    {{ "All entries" if currentCategory == 'All' else currentCategory }}
-</h1>
-<nav class="categories-navigation" aria-labelledby="Navigate by topics">
-    <ul role="list" data-layout="cluster" data-props="noPad">
-        {%- for category in collections.categoriesAndAll %}
-            {% set category_url = '' if category == 'All' else category | slugify %}
-            <li data-layout="stack" data-active="{{ 'true' if currentCategory == category else 'false' }}">
-                {% set isActive = 'active' if currentCategory == category %}
-                <a data-props="x:center" data-button="{{ isActive }} tag" href="/{{ category_url }}">{{ 'All' if category == 'All' else category }}</a>
-            </li>
+
+<nav data-font="sans-serif" class="categories-navigation" data-layout="cluster" aria-labelledby="Navigate by topics">
+    <strong>Browse by topics:</strong>
+    {%- for category in collections.categoriesAndAll %}
+        {% set category_url = '' if category == 'All' else category | slugify %}
+        {% set category_count = collections.stories | filterByCategory(category) | length %}
+        {% set isActive = 'active noHover' if currentCategory == category %}
+        <a data-props="x:center" data-button="{{ isActive }} text" href="/{{ category_url }}">
+            <span aria-hidden>#</span>{{ 'All' if category == 'All' else category }} 
+            <span>({{ category_count }})</span>
+            </a>
+    {% endfor -%}
+</nav>
+<section data-layout="stack">
+    <h1>
+        {{ "All entries" if currentCategory == 'All' else currentCategory }}
+    </h1>
+    <ul data-layout="stack" data-props="recursive">
+        {%- set entries = collections.stories | filterByCategory(currentCategory) | limit(50) -%}
+        {%- for entry in entries %}
+            {% include "partials/story-card-entry.njk" %}
         {% endfor -%}
     </ul>
-</nav>
-
-<ul  data-layout="stack" data-props="recursive" role="list" >
-    {%- set entries = collections.stories | filterByCategory(currentCategory) | limit(50) -%}
-    {%- for entry in entries %}
-        {% include "partials/story-card-entry.njk" %}
-    {% endfor -%}
-</ul>
+</section>
