feat: Improve typography

--- a/src/_includes/partials/site-theme-toggle.njk
+++ b/src/_includes/partials/site-theme-toggle.njk
@@ -1,5 +1,5 @@
 <template class="theme-toggle-template">
-    <button data-heading="3" class="theme-toggle" type="button" title="Dark theme" aria-label="Dark theme">
+    <button class="theme-toggle" type="button" title="Dark theme" aria-label="Dark theme">
         <svg
             xmlns="http://www.w3.org/2000/svg"
             aria-hidden="true"
