--- a/src/_includes/partials/site-footer.njk
+++ b/src/_includes/partials/site-footer.njk
@@ -1,6 +1,6 @@
 <footer data-layout="stack" data-props="x:start space:m invert">
     <nav>
-        <h2 class="visually-hidden" data-heading="6">Other links</h2>
+        <h2 class="visually-hidden">Other links</h2>
         <div data-layout="cluster">
             {%- for page in collections.webpage %}
                 <a data-button="link" href="{{ page.url }}">{{ page.data.title }}</a>
