--- a/src/_includes/partials/story-card-entry.njk
+++ b/src/_includes/partials/story-card-entry.njk
@@ -1,5 +1,5 @@
 <li>
-    <a class="headline-entry" data-heading="4" itemprop="url" data-button="link" href="/{{ entry.slug }}" data-icon="{{entry.icon}}">
+    <a class="headline-entry" itemprop="url" data-button="link" href="/{{ entry.slug }}" data-icon="{{entry.icon}}">
         {{ entry.name }}
     </a>
 </li>
