--- a/src/content/home-page.njk
+++ b/src/content/home-page.njk
@@ -29,10 +29,10 @@ eleventyComputed:
     {% endfor -%}
 </nav>
 <section data-layout="stack">
-    <h1>
-        {{ "All entries" if currentCategory == 'All' else currentCategory }}
+    <h1 data-heading="5">
+        {{ "All entries" if currentCategory == 'All' else 'Entries tagged with: '+currentCategory }}
     </h1>
-    <ul data-layout="stack" data-props="recursive">
+    <ul role="list" data-layout="stack" data-props="recursive">
         {%- set entries = collections.stories | filterByCategory(currentCategory) | limit(50) -%}
         {%- for entry in entries %}
             {% include "partials/story-card-entry.njk" %}
