--- a/src/content/home-page.njk
+++ b/src/content/home-page.njk
@@ -16,13 +16,13 @@ eleventyComputed:
         title: "{{'Home' if currentCategory == 'All' else currentCategory}}"
 ---
 
-<nav data-font="sans-serif" class="categories-navigation" data-layout="cluster" aria-labelledby="Navigate by topics">
-    <strong>Browse by topics:</strong>
+<nav  class="categories-navigation" data-layout="cluster" aria-labelledby="Navigate by topics">
+    <strong data-font="sans-serif">Browse by topics:</strong>
     {%- for category in collections.categoriesAndAll %}
         {% set category_url = '' if category == 'All' else category | slugify %}
         {% set category_count = collections.stories | filterByCategory(category) | length %}
         {% set isActive = 'active noHover' if currentCategory == category %}
-        <a data-props="x:center" data-button="{{ isActive }} text" href="/{{ category_url }}">
+        <a rel="tag" data-props="x:center" href="/{{ category_url }}">
             <span aria-hidden>#</span>{{ 'All' if category == 'All' else category }} 
             <span>({{ category_count }})</span>
             </a>
@@ -32,10 +32,8 @@ eleventyComputed:
     <h1 data-heading="5">
         {{ "All entries" if currentCategory == 'All' else 'Entries tagged with: '+currentCategory }}
     </h1>
-    <ul role="list" data-layout="stack" data-props="recursive">
         {%- set entries = collections.stories | filterByCategory(currentCategory) | limit(50) -%}
         {%- for entry in entries %}
             {% include "partials/story-card-entry.njk" %}
         {% endfor -%}
-    </ul>
 </section>
