feat: Lunch improvements - remove home navigation - default to light theme - add icons

--- a/src/_includes/partials/story-card-entry.njk
+++ b/src/_includes/partials/story-card-entry.njk
@@ -1,5 +1,8 @@
 <article>
     <a class="headline-entry" itemprop="url" data-button="link" href="/{{ entry.slug }}" data-icon="{{entry.icon}}">
+        <span aria-hidden="true">
+            {{entry.icon}}
+        </span>
         {{ entry.name }}
     </a>
     <p>
