--- a/src/content/home-page.njk
+++ b/src/content/home-page.njk
@@ -16,7 +16,7 @@ eleventyComputed:
         title: "{{'Home' if currentCategory == 'All' else currentCategory}}"
 ---
 
-<nav  class="categories-navigation" data-layout="cluster" aria-labelledby="Navigate by topics">
+{# <nav  class="categories-navigation" data-layout="cluster" aria-labelledby="Navigate by topics">
     <strong data-font="sans-serif">Browse by topics:</strong>
     {%- for category in collections.categoriesAndAll %}
         {% set category_url = '' if category == 'All' else category | slugify %}
@@ -27,7 +27,7 @@ eleventyComputed:
             <span>({{ category_count }})</span>
             </a>
     {% endfor -%}
-</nav>
+</nav> #}
 <section data-layout="stack">
     <h1 data-heading="5">
         {{ "All entries" if currentCategory == 'All' else 'Entries tagged with: '+currentCategory }}
